feat: Update strategies  notebook

--- a/notebooks/eqprop/strategies.ipynb
+++ b/notebooks/eqprop/strategies.ipynb
@@ -13,11 +13,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
     "\n",
     "from src.core.eqprop.eqprop_util import OTS, P3OTS\n",
-    "from src.core.eqprop.strategy import GradientDescentStrategy, NewtonStrategy"
+    "from src.core.eqprop.strategy import GradientDescentStrategy, NewtonStrategy\n",
+    "from src.utils.logging_utils import LogCapture"
    ]
   },
   {
@@ -26,7 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = \"../../logs/test/last.ckpt\"\n",
+    "ckpt_dir = \"../../logs/test\"\n",
+    "ckpt_filename = \"last2.ckpt\"\n",
+    "ckpt_path = os.path.join(ckpt_dir, ckpt_filename)\n",
     "\n",
     "ckpt = torch.load(ckpt_path, map_location=\"cpu\")\n",
     "w1 = ckpt[\"state_dict\"][\"net.model.0.weight\"]\n",
@@ -34,7 +39,27 @@
     "\n",
     "model = torch.nn.Sequential(torch.nn.Linear(3, 2, bias=False), torch.nn.Linear(2, 2, bias=False))\n",
     "model[0].weight.data = w1\n",
-    "model[1].weight.data = w2"
+    "model[1].weight.data = w2\n",
+    "\n",
+    "torch.set_printoptions(precision=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_xyce = torch.load(os.path.join(ckpt_dir, \"[1, 1]\"), map_location=\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_xyce"
    ]
   },
   {
@@ -62,12 +87,13 @@
    "outputs": [],
    "source": [
     "st = NewtonStrategy(\n",
-    "    activation=P3OTS(Is=1e-6, Vl=-0.6, Vr=0.6, Vth=1.0),\n",
+    "    activation=OTS(Is=1e-9, Vl=0.3, Vr=0.6, Vth=0.026),\n",
     "    clip_threshold=0.5,\n",
     "    amp_factor=1.0,\n",
-    "    max_iter=5,\n",
-    "    atol=1e-7,\n",
+    "    max_iter=50,\n",
+    "    atol=1e-8,\n",
     "    add_nonlin_last=False,\n",
+    "    momentum=0.5,\n",
     ")\n",
     "st.set_strategy_params(model)"
    ]
@@ -109,52 +135,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import logging\n",
-    "\n",
-    "\n",
-    "class LogCapture:\n",
-    "    def __init__(self, logger_name: str = None):\n",
-    "        \"\"\"Capture log messages to a list\n",
-    "\n",
-    "        Args:\n",
-    "            logger_name (str, optional): Name of the logger. Usually the file path under src. Defaults to None.\n",
-    "\n",
-    "        Example:\n",
-    "            with LogCapture(\"src.core.eqprop.strategy\") as log_capture:\n",
-    "                logger = logging.getLogger(\"src.core.eqprop.strategy\")\n",
-    "                logger.info(\"Hello\")\n",
-    "                logger.info(\"World\")\n",
-    "                log_list = log_capture.get_log_list()\n",
-    "        \"\"\"\n",
-    "        self.log_stream = io.StringIO()\n",
-    "        self.logger = logging.getLogger(logger_name)\n",
-    "        self.logging_level = self.logger.getEffectiveLevel()\n",
-    "        self.stream_handler = logging.StreamHandler(self.log_stream)\n",
-    "        self.formatter = logging.Formatter(\"%(message)s\")\n",
-    "        self.stream_handler.setFormatter(self.formatter)\n",
-    "\n",
-    "    def __enter__(self):\n",
-    "        self.logger.setLevel(logging.DEBUG)\n",
-    "        self.logger.addHandler(self.stream_handler)\n",
-    "        return self\n",
-    "\n",
-    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
-    "        self.logger.removeHandler(self.stream_handler)\n",
-    "        self.log_stream.close()\n",
-    "        self.logger.setLevel(self.logging_level)\n",
-    "\n",
-    "    def get_log_list(self):\n",
-    "        log_contents = self.log_stream.getvalue().strip().split(\"\\n\")\n",
-    "        return log_contents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import re\n",
     "\n",
     "\n",
@@ -179,11 +159,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([[-2, 2, 1]]).float()\n",
-    "torch.set_printoptions(precision=10)\n",
+    "x = torch.tensor([[2, 2, 1]]).float()\n",
     "i_ext = None  # torch.tensor(0)\n",
+    "st.momentum = 0.4\n",
+    "st.max_iter = 100\n",
     "with LogCapture(\"src.core.eqprop.strategy\") as log_capture:\n",
-    "    st.solve(x, i_ext)\n",
+    "    v = st.solve(x, i_ext)\n",
     "    log_list = log_capture.get_log_list()"
    ]
   },
@@ -193,8 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_traj = extract_and_convert_tensors(log_list)\n",
-    "print(v_traj)"
+    "log_list"
    ]
   },
   {
@@ -202,7 +182,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v_traj = extract_and_convert_tensors(log_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def project_and_plot(trajectories, target_dim=2, plot_arrow: bool = False):\n",
+    "def project_and_plot(trajectories, ground_truth, target_dim=2, plot_arrow: bool = False):\n",
     "    \"\"\"\n",
     "    n차원 데이터를 2차원 또는 3차원으로 투영하고 플롯합니다.\n",
     "\n",
@@ -269,11 +251,15 @@
     "\n",
     "    # 데이터를 target_dim 평면으로 투영\n",
     "    projected_data = torch.matmul(data, eigenvectors.T).numpy()\n",
-    "\n",
+    "    projected_gt = torch.matmul(ground_truth, eigenvectors.T).numpy()\n",
     "    # 플롯\n",
     "    if target_dim == 2:\n",
     "        plt.figure(figsize=(8, 6))\n",
     "        plt.plot(projected_data[:, 0], projected_data[:, 1], \"o-\", label=\"Projected Trajectory\")\n",
+    "        plt.plot(projected_data[-1, 0], projected_data[-1, 1], \"k^\", markersize=10)\n",
+    "        plt.plot(\n",
+    "            projected_gt[-1, 0], projected_gt[-1, 1], \"r*\", markersize=10, label=\"Ground Truth\"\n",
+    "        )\n",
     "        if plot_arrow:\n",
     "            for i in range(len(projected_data) - 1):\n",
     "                plt.arrow(\n",
@@ -292,6 +278,7 @@
     "        plt.legend()\n",
     "        plt.grid(True)\n",
     "        plt.show()\n",
+    "        # mark star at the end point\n",
     "    elif target_dim == 3:\n",
     "        fig = plt.figure(figsize=(10, 8))\n",
     "        ax = fig.add_subplot(111, projection=\"3d\")\n",
@@ -302,6 +289,17 @@
     "            \"o-\",\n",
     "            label=\"Projected Trajectory\",\n",
     "        )\n",
+    "        ax.plot(\n",
+    "            projected_data[-1, 0], projected_data[-1, 1], projected_data[-1, 2], \"k^\", markersize=10\n",
+    "        )\n",
+    "        ax.plot(\n",
+    "            projected_gt[-1, 0],\n",
+    "            projected_gt[-1, 1],\n",
+    "            projected_gt[-1, 2],\n",
+    "            \"r*\",\n",
+    "            markersize=10,\n",
+    "            label=\"Ground Truth\",\n",
+    "        )\n",
     "        if plot_arrow:\n",
     "            for i in range(len(projected_data) - 1):\n",
     "                ax.quiver(\n",
@@ -311,7 +309,7 @@
     "                    projected_data[i + 1, 0] - projected_data[i, 0],\n",
     "                    projected_data[i + 1, 1] - projected_data[i, 1],\n",
     "                    projected_data[i + 1, 2] - projected_data[i, 2],\n",
-    "                    arrow_length_ratio=0.1,\n",
+    "                    arrow_length_ratio=0.01,\n",
     "                    color=\"k\",\n",
     "                )\n",
     "        ax.set_xlabel(\"First Principal Component\")\n",
@@ -330,7 +328,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_and_plot(v_traj, target_dim=2)"
+    "gt = torch.cat(v_xyce, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_and_plot(v_traj[:-1], gt, target_dim=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ETC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_xyce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_traj[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.bias()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.OTS.i(v_traj[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.rhs(x).shape"
    ]
   },
   {
@@ -359,31 +418,6 @@
    "source": [
     "L = st.laplacian()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "L @ v_traj[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st.rhs(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -402,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
