feat: Add OTSConfig to activation store

--- a/notebooks/eqprop/strategies.ipynb
+++ b/notebooks/eqprop/strategies.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "ckpt_dir = \"../../logs/test\"\n",
-    "ckpt_filename = \"last2.ckpt\"\n",
+    "ckpt_filename = \"last.ckpt\"\n",
     "ckpt_path = os.path.join(ckpt_dir, ckpt_filename)\n",
     "\n",
     "ckpt = torch.load(ckpt_path, map_location=\"cpu\")\n",
@@ -50,7 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_xyce = torch.load(os.path.join(ckpt_dir, \"[1, 1]\"), map_location=\"cpu\")"
+    "v_xyce = torch.load(os.path.join(ckpt_dir, \"[1, 1]\"), map_location=\"cpu\")\n",
+    "gt = torch.cat(v_xyce, dim=1)\n",
+    "gt"
    ]
   },
   {
@@ -59,25 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_xyce"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w2"
+    "print(w1)\n",
+    "print(w2)"
    ]
   },
   {
@@ -87,13 +72,13 @@
    "outputs": [],
    "source": [
     "st = NewtonStrategy(\n",
-    "    activation=OTS(Is=1e-9, Vl=0.3, Vr=0.6, Vth=0.026),\n",
+    "    activation=OTS(Is=1e-8, Vl=0.1, Vr=0.9, Vth=0.026),\n",
     "    clip_threshold=0.5,\n",
     "    amp_factor=1.0,\n",
     "    max_iter=50,\n",
-    "    atol=1e-8,\n",
+    "    atol=1e-7,\n",
     "    add_nonlin_last=False,\n",
-    "    momentum=0.5,\n",
+    "    momentum=0.1,\n",
     ")\n",
     "st.set_strategy_params(model)"
    ]
@@ -159,10 +144,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([[2, 2, 1]]).float()\n",
+    "x = torch.tensor([[-2, 2, 1]]).float()\n",
     "i_ext = None  # torch.tensor(0)\n",
-    "st.momentum = 0.4\n",
-    "st.max_iter = 100\n",
+    "st.momentum = 0.1\n",
+    "st.max_iter = 50\n",
     "with LogCapture(\"src.core.eqprop.strategy\") as log_capture:\n",
     "    v = st.solve(x, i_ext)\n",
     "    log_list = log_capture.get_log_list()"
@@ -230,14 +215,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def project_and_plot(trajectories, ground_truth, target_dim=2, plot_arrow: bool = False):\n",
+    "def project_and_plot(trajectories, ground_truth, target_dim=2, plot_label: bool = False):\n",
     "    \"\"\"\n",
     "    n차원 데이터를 2차원 또는 3차원으로 투영하고 플롯합니다.\n",
     "\n",
     "    Parameters:\n",
-    "    trajectories (list): n차원 벡터 궤적 리스트\n",
-    "    target_dim (int): 투영할 목표 차원 (2 또는 3)\n",
-    "    plot\n",
+    "        trajectories (list): n차원 벡터 궤적 리스트\n",
+    "        target_dim (int): 투영할 목표 차원 (2 또는 3)\n",
+    "        plot_label (bool): 레이블을 플롯에 추가할지 여부\n",
     "    \"\"\"\n",
     "    # 텐서로 변환\n",
     "    # data = torch.tensor(trajectories, dtype=torch.float32)\n",
@@ -260,18 +245,18 @@
     "        plt.plot(\n",
     "            projected_gt[-1, 0], projected_gt[-1, 1], \"r*\", markersize=10, label=\"Ground Truth\"\n",
     "        )\n",
-    "        if plot_arrow:\n",
+    "        if plot_label:\n",
     "            for i in range(len(projected_data) - 1):\n",
-    "                plt.arrow(\n",
-    "                    projected_data[i, 0],\n",
-    "                    projected_data[i, 1],\n",
-    "                    projected_data[i + 1, 0] - projected_data[i, 0],\n",
-    "                    projected_data[i + 1, 1] - projected_data[i, 1],\n",
-    "                    head_width=0.1,\n",
-    "                    head_length=0.2,\n",
-    "                    fc=\"k\",\n",
-    "                    ec=\"k\",\n",
-    "                )\n",
+    "                # plot label if i%10 == 0\n",
+    "                if i % 10 == 0:\n",
+    "                    plt.text(\n",
+    "                        projected_data[i, 0],\n",
+    "                        projected_data[i, 1],\n",
+    "                        str(i),\n",
+    "                        fontsize=12,\n",
+    "                        color=\"blue\",\n",
+    "                    )\n",
+    "\n",
     "        plt.xlabel(\"First Principal Component\")\n",
     "        plt.ylabel(\"Second Principal Component\")\n",
     "        plt.title(\"Trajectory Projection onto 2D Plane\")\n",
@@ -282,6 +267,8 @@
     "    elif target_dim == 3:\n",
     "        fig = plt.figure(figsize=(10, 8))\n",
     "        ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "        # rotate the 3D plot\n",
+    "        ax.view_init(elev=20, azim=40)\n",
     "        ax.plot(\n",
     "            projected_data[:, 0],\n",
     "            projected_data[:, 1],\n",
@@ -300,18 +287,17 @@
     "            markersize=10,\n",
     "            label=\"Ground Truth\",\n",
     "        )\n",
-    "        if plot_arrow:\n",
+    "        if plot_label:\n",
     "            for i in range(len(projected_data) - 1):\n",
-    "                ax.quiver(\n",
-    "                    projected_data[i, 0],\n",
-    "                    projected_data[i, 1],\n",
-    "                    projected_data[i, 2],\n",
-    "                    projected_data[i + 1, 0] - projected_data[i, 0],\n",
-    "                    projected_data[i + 1, 1] - projected_data[i, 1],\n",
-    "                    projected_data[i + 1, 2] - projected_data[i, 2],\n",
-    "                    arrow_length_ratio=0.01,\n",
-    "                    color=\"k\",\n",
-    "                )\n",
+    "                if i % 10 == 0:\n",
+    "                    ax.text(\n",
+    "                        projected_data[i, 0],\n",
+    "                        projected_data[i, 1],\n",
+    "                        projected_data[i, 2],\n",
+    "                        str(i),\n",
+    "                        fontsize=12,\n",
+    "                        color=\"blue\",\n",
+    "                    )\n",
     "        ax.set_xlabel(\"First Principal Component\")\n",
     "        ax.set_ylabel(\"Second Principal Component\")\n",
     "        ax.set_zlabel(\"Third Principal Component\")\n",
@@ -328,16 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt = torch.cat(v_xyce, dim=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_and_plot(v_traj[:-1], gt, target_dim=2)"
+    "project_and_plot(v_traj[:-1], gt, target_dim=3, plot_label=True)"
    ]
   },
   {
@@ -407,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st.residual(v_traj[40], x, None)"
+    "st.residual(gt, x, None)"
    ]
   },
   {
@@ -436,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
