feat: Add qpsolver strategy

--- a/notebooks/eqprop/strategies.ipynb
+++ b/notebooks/eqprop/strategies.ipynb
@@ -19,7 +19,7 @@
     "import torch\n",
     "\n",
     "from src.core.eqprop.eqprop_util import OTS, P3OTS\n",
-    "from src.core.eqprop.strategy import GradientDescentStrategy, NewtonStrategy\n",
+    "from src.core.eqprop.strategy import GradientDescentStrategy, NewtonStrategy, QPStrategy\n",
     "from src.utils.logging_utils import LogCapture"
    ]
   },
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "ckpt_dir = \"../../logs/test\"\n",
-    "ckpt_filename = \"last.ckpt\"\n",
+    "ckpt_filename = \"last2.ckpt\"\n",
     "ckpt_path = os.path.join(ckpt_dir, ckpt_filename)\n",
     "\n",
     "ckpt = torch.load(ckpt_path, map_location=\"cpu\")\n",
@@ -50,9 +50,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_xyce = torch.load(os.path.join(ckpt_dir, \"[1, 1]\"), map_location=\"cpu\")\n",
-    "gt = torch.cat(v_xyce, dim=1)\n",
-    "gt"
+    "v_xyce = []\n",
+    "for i in [[-1, -1], [-1, 1], [1, -1], [1, 1]]:\n",
+    "    t = torch.load(os.path.join(ckpt_dir, str(i)), map_location=\"cpu\")\n",
+    "    v_xyce.append(t)\n",
+    "gt = torch.cat(v_xyce[0], dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in v_xyce:\n",
+    "    print(i)"
    ]
   },
   {
@@ -71,16 +83,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st = NewtonStrategy(\n",
+    "# st = NewtonStrategy(\n",
+    "#     activation=OTS(Is=1e-8, Vl=0.1, Vr=0.9, Vth=0.026),\n",
+    "#     clip_threshold=0.5,\n",
+    "#     amp_factor=1.0,\n",
+    "#     max_iter=50,\n",
+    "#     atol=1e-7,\n",
+    "#     add_nonlin_last=False,\n",
+    "#     momentum=0.1,\n",
+    "# )\n",
+    "# st.set_strategy_params(model)\n",
+    "st = QPStrategy(\n",
     "    activation=OTS(Is=1e-8, Vl=0.1, Vr=0.9, Vth=0.026),\n",
     "    clip_threshold=0.5,\n",
     "    amp_factor=1.0,\n",
     "    max_iter=50,\n",
     "    atol=1e-7,\n",
     "    add_nonlin_last=False,\n",
-    "    momentum=0.1,\n",
     ")\n",
     "st.set_strategy_params(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt[\"state_dict\"][\"net.ypred\"]"
    ]
   },
   {
@@ -144,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([[-2, 2, 1]]).float()\n",
+    "x = torch.tensor([[2, 2, 1]]).float()\n",
     "i_ext = None  # torch.tensor(0)\n",
     "st.momentum = 0.1\n",
     "st.max_iter = 50\n",
@@ -160,6 +190,24 @@
    "outputs": [],
    "source": [
     "log_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v"
    ]
   },
   {
@@ -191,7 +239,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from qpsolvers import available_solvers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "available_solvers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qpsolvers import Problem, solve_problem, solve_qp\n",
+    "\n",
+    "x = torch.tensor([[2, 2, 1]]).float()\n",
+    "st.reset()\n",
+    "P = st.laplacian().numpy()\n",
+    "q = st.rhs(x).squeeze().numpy()\n",
+    "# q2 = q.expand(2, -1)\n",
+    "lb = st.OTS.Vl * np.ones_like(q, dtype=np.float32)\n",
+    "ub = st.OTS.Vr * np.ones_like(q, dtype=np.float32)\n",
+    "problem = Problem(P, q, lb=lb, ub=ub)\n",
+    "sol = solve_problem(problem=problem, solver=\"proxqp\", verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Primal: x = {sol.x}\")\n",
+    "print(f\"Dual (Gx <= h): z = {sol.z}\")\n",
+    "print(f\"Dual (Ax == b): y = {sol.y}\")\n",
+    "print(f\"Dual (lb <= x <= ub): z_box = {sol.z_box}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol.dual_residual()\n",
+    "sol.duality_gap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2 = q.expand(2, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(v.split(st.dims, dim=1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
