--- a/notebooks/eqprop/strategies.ipynb
+++ b/notebooks/eqprop/strategies.ipynb
@@ -18,9 +18,16 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
-    "from src.core.eqprop.eqprop_util import OTS, P3OTS\n",
-    "from src.core.eqprop.strategy import GradientDescentStrategy, NewtonStrategy, QPStrategy\n",
+    "from src.core.eqprop.python.eqprop_util import OTS, P3OTS\n",
+    "from src.core.eqprop.python.strategy import ProxQPStrategy, QPStrategy\n",
     "from src.utils.logging_utils import LogCapture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XOR"
    ]
   },
   {
@@ -78,6 +85,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MNIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "from src.core.eqprop.python.eqprop_util import positive_param_init\n",
+    "from src.data.mnist_datamodule import MNISTDataModule\n",
+    "\n",
+    "dm = MNISTDataModule(batch_size=32, data_dir=\"../../data\")\n",
+    "dm.setup()\n",
+    "x, y = next(iter(dm.train_dataloader()))\n",
+    "x = x.flatten(start_dim=1)\n",
+    "model = nn.Sequential(nn.Linear(784, 100, bias=False), nn.Linear(100, 10, bias=False))\n",
+    "model.apply(positive_param_init())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -93,7 +126,7 @@
     "#     momentum=0.1,\n",
     "# )\n",
     "# st.set_strategy_params(model)\n",
-    "st = QPStrategy(\n",
+    "st = ProxQPStrategy(\n",
     "    activation=OTS(Is=1e-8, Vl=0.1, Vr=0.9, Vth=0.026),\n",
     "    clip_threshold=0.5,\n",
     "    amp_factor=1.0,\n",
@@ -123,18 +156,6 @@
     "print(ckpt[\"state_dict\"][\"net.model.1.positive_node\"])\n",
     "print(ckpt[\"state_dict\"][\"net.model.0.negative_node\"])\n",
     "print(ckpt[\"state_dict\"][\"net.model.1.negative_node\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p0 = ckpt[\"state_dict\"][\"net.model.0.positive_node\"]\n",
-    "p1 = ckpt[\"state_dict\"][\"net.model.1.positive_node\"]\n",
-    "# torch.allclose(p0, p1, rtol=1e-7)\n",
-    "p1"
    ]
   },
   {
@@ -174,22 +195,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor([[2, 2, 1]]).float()\n",
+    "# x = torch.tensor([[2, 2, 1]]).float()\n",
     "i_ext = None  # torch.tensor(0)\n",
     "st.momentum = 0.1\n",
     "st.max_iter = 50\n",
     "with LogCapture(\"src.core.eqprop.strategy\") as log_capture:\n",
     "    v = st.solve(x, i_ext)\n",
     "    log_list = log_capture.get_log_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_list"
    ]
   },
   {
@@ -240,24 +252,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qpsolvers import available_solvers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "available_solvers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from qpsolvers import Problem, solve_problem, solve_qp\n",
     "\n",
     "x = torch.tensor([[2, 2, 1]]).float()\n",
@@ -267,6 +261,7 @@
     "# q2 = q.expand(2, -1)\n",
     "lb = st.OTS.Vl * np.ones_like(q, dtype=np.float32)\n",
     "ub = st.OTS.Vr * np.ones_like(q, dtype=np.float32)\n",
+    "v = solve_qp(P, q, lb=lb, ub=ub, solver=\"proxqp\")\n",
     "problem = Problem(P, q, lb=lb, ub=ub)\n",
     "sol = solve_problem(problem=problem, solver=\"proxqp\", verbose=True)"
    ]
@@ -284,12 +279,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sol."
+    "## VectorQP"
    ]
   },
   {
@@ -298,8 +291,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol.dual_residual()\n",
-    "sol.duality_gap()"
+    "import proxsuite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = st.laplacian().numpy()\n",
+    "g = st.rhs(x).squeeze().numpy()\n",
+    "A = b = C = l_box = u_box = None\n",
+    "lb = st.OTS.Vl * np.ones_like(g[0], dtype=np.float32)\n",
+    "ub = st.OTS.Vr * np.ones_like(g[0], dtype=np.float32)\n",
+    "n_eq = 0\n",
+    "n_ineq = g.shape[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = x.shape[0]\n",
+    "n = H.shape[0]\n",
+    "qps = proxsuite.proxqp.dense.VectorQP()\n",
+    "for i in range(batch_size):\n",
+    "    qp = proxsuite.proxqp.dense.QP(n, n_eq, n_ineq, True)\n",
+    "    qp.init(H, g[i], A, b, C, l_box, u_box, lb, ub)\n",
+    "    qps.append(qp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qps[0].settings.initial_guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_threads = proxsuite.proxqp.omp_get_max_threads() - 1\n",
+    "proxsuite.proxqp.dense.solve_in_parallel(qps, num_threads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_list = []\n",
+    "for i in range(batch_size):\n",
+    "    vout = qps[i].results.x\n",
+    "    nodes_list.append(torch.from_numpy(vout).type_as(x))\n",
+    "# nodes = torch.stack(nodes_list, dim=0).split(self.dims, dim="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = torch.stack(nodes_list, dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qps[0]"
    ]
   },
   {
@@ -312,12 +393,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## qplayer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(v.split(st.dims, dim=1))"
+    "x = torch.tensor([[2, 2, 1]]).float()\n",
+    "st.reset()\n",
+    "P = st.laplacian()\n",
+    "q = st.rhs(x).squeeze()\n",
+    "# q2 = q.expand(2, -1)\n",
+    "lb = st.OTS.Vl\n",
+    "ub = st.OTS.Vr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from proxsuite.torch import qplayer\n",
+    "\n",
+    "qp = qplayer.QPFunction()\n",
+    "x_qp, _, __ = qp(P, q, None, None, None, lb, ub)"
    ]
   },
   {
@@ -540,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
