[WIP] Add eqprop module

--- a/notebooks/eqprop/strategies.ipynb
+++ b/notebooks/eqprop/strategies.ipynb
@@ -300,6 +300,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "[None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "H = st.laplacian().numpy()\n",
     "g = st.rhs(x).squeeze().numpy()\n",
     "A = b = C = l_box = u_box = None\n",
