refactor: Remove solver.__call__() nudge_phase input arg and node energy output arg

--- a/notebooks/eqprop/perturbation.ipynb
+++ b/notebooks/eqprop/perturbation.ipynb
@@ -129,7 +129,7 @@
     "    print(f\"ypred: {ypred.data}, y: {y}\")\n",
     "    loss = criterion(ypred, y)\n",
     "    loss.backward()\n",
-    "    u_nudge, _ = net2.solver(x, nudge_phase=True, grad=net2.ypred.grad)\n",
+    "    u_nudge = net2.solver(x, grad=net2.ypred.grad)\n",
     "    for idx, u_n in enumerate(u_nudge):\n",
     "        u_f = net2.model[idx].get_buffer(\"positive_node\")\n",
     "        diff = torch.norm(u_n - u_f)\n",
