refactor: Update import paths for eqprop module
Split activations and other util functions into src/utils/eqprop_utils
Split solver related configs under configs/eqprop/solver.py
& Remove unused modules from import

--- a/notebooks/1.0-lhr-torch-benchmark.ipynb
+++ b/notebooks/1.0-lhr-torch-benchmark.ipynb
@@ -144,12 +144,12 @@
    "source": [
     "import torch\n",
     "\n",
-    "from src.eqprop import eqprop_util\n",
+    "from src.utils import eqprop_utils\n",
     "\n",
     "\n",
     "def layer_power_1(G, in_v, out_v):\n",
     "    \"\"\"Calculate sum_{i,j} G_{ij}*(in_v_i - out_v_j)^2\"\"\"\n",
-    "    return torch.sum(G.mT * eqprop_util.deltaV(in_v, out_v).pow(2), dim=(1, 2))\n",
+    "    return torch.sum(G.mT * eqprop_utils.deltaV(in_v, out_v).pow(2), dim=(1, 2))\n",
     "\n",
     "\n",
     "def layer_power_2(G, in_v, out_v):\n",
@@ -316,7 +316,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "# from src.eqprop import eqprop_util"
+    "# from src.utils import eqprop_utils"
    ]
   },
   {
@@ -327,8 +327,8 @@
    "source": [
     "def grad1(in_V_free, out_V_free, in_V, out_V):\n",
     "    \"\"\"Calculate the gradient of the layer power with respect to the free variables\"\"\"\n",
-    "    free_dV = eqprop_util.deltaV(in_V_free, out_V_free)\n",
-    "    nudge_dV = eqprop_util.deltaV(in_V, out_V)\n",
+    "    free_dV = eqprop_utils.deltaV(in_V_free, out_V_free)\n",
+    "    nudge_dV = eqprop_utils.deltaV(in_V, out_V)\n",
     "    return nudge_dV.pow(2).mean(dim=0) - free_dV.pow(2).mean(dim=0)\n",
     "\n",
     "\n",
@@ -465,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
