--- a/notebooks/5.0-lhr-perf-profile.ipynb
+++ b/notebooks/5.0-lhr-perf-profile.ipynb
@@ -254,7 +254,7 @@
     "\n",
     "def import_module():\n",
     "\n",
-    "    from src.core.eqprop.strategy import NewtonStrategy\n",
+    "    from src.core.eqprop.python.strategy import NewtonStrategy\n",
     "\n",
     "\n",
     "pr = cProfile.Profile()\n",
@@ -312,6 +312,8 @@
    "outputs": [],
    "source": [
     "# %%writefile simulation.py\n",
+    "\n",
+    "\n",
     "def foo(x, y, iterations=100):\n",
     "    for _ in range(iterations):\n",
     "        x = x + y\n",
