--- a/notebooks/eqprop/newton_solver.ipynb
+++ b/notebooks/eqprop/newton_solver.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "from functools import partial\n",
     "\n",
-    "from src.rqprop.eqprop_util import init_params\n",
+    "from src.rqprop.eqprop_utils import init_params\n",
     "\n",
     "ep2.model.apply(partial(init_params, min=1e-5, max=1))"
    ]
@@ -307,8 +307,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.core.eqprop.eqprop_util import OTS, P3OTS\n",
     "from src.eqprop.E_minimizer import _stepsolve2\n",
+    "from src.utils.eqprop_utils import OTS, P3OTS\n",
     "\n",
     "dims = [2 * 28 * 28, 128, 10 * 2]\n",
     "W = [w1, w2]\n",
@@ -368,7 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.core.eqprop.eqprop_util import OTS, P3OTS"
+    "from src.utils.eqprop_utils import OTS, P3OTS"
    ]
   },
   {
@@ -608,14 +608,14 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "\n",
-    "from src.eqprop import eqprop_util\n",
+    "from src.eqprop import eqprop_utils\n",
     "\n",
     "x = torch.linspace(-1.0, 1.0, 100)\n",
-    "ots = eqprop_util.OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
-    "p3ots = eqprop_util.P3OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
+    "ots = eqprop_utils.OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
+    "p3ots = eqprop_utils.P3OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
     "y = ots.i(x)\n",
     "y2 = p3ots.i(x)\n",
-    "# y4 = eqprop_util.rectifier_poly_i(x, power=3)\n",
+    "# y4 = eqprop_utils.rectifier_poly_i(x, power=3)\n",
     "plt.plot(x, y, label=\"exponential\")\n",
     "plt.plot(x, y2, label=\"quadratic\")\n",
     "# plt.plot(x, y4, label=\"cubic\")\n",
@@ -630,7 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "symtanh = eqprop_util.Symtanh(Vl=0.3, Vr=0.7, Is=1, Vth=0.2)\n",
+    "symtanh = eqprop_utils.Symtanh(Vl=0.3, Vr=0.7, Is=1, Vth=0.2)\n",
     "y = symtanh.i(x)\n",
     "b = symtanh.a(x)\n",
     "plt.plot(x, y, label=\"symtanh\")\n",
@@ -677,7 +677,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "from src.core.eqprop.eqprop_util import OTS, P3OTS, SymOTS\n",
+    "from src.utils.eqprop_utils import OTS, P3OTS, SymOTS\n",
     "\n",
     "ots = OTS(Vl=-0.5, Vr=0.5)\n",
     "symots = SymOTS(Vl=-0.5, Vr=0.5)\n",
