--- a/notebooks/eqprop/ots-plot.ipynb
+++ b/notebooks/eqprop/ots-plot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.core.eqprop.eqprop_util import OTS\n",
+    "from src.utils.eqprop_utils import OTS\n",
     "\n",
     "ots = OTS()\n",
     "# plot OTS.i()\n",
