--- a/notebooks/eqprop/playground.ipynb
+++ b/notebooks/eqprop/playground.ipynb
@@ -518,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils import eqprop_util"
+    "from src.utils import eqprop_utils"
    ]
   },
   {
@@ -540,7 +540,7 @@
    "outputs": [],
    "source": [
     "%%timeit\n",
-    "eqprop_util.deltaV(b, a)"
+    "eqprop_utils.deltaV(b, a)"
    ]
   },
   {
@@ -562,9 +562,9 @@
     "\n",
     "import torch\n",
     "\n",
-    "from src.utils import eqprop_util\n",
+    "from src.utils import eqprop_utils\n",
     "\n",
-    "partial_fn = functools.partial(eqprop_util.rectifier_p3_i, Is=1e-6)\n",
+    "partial_fn = functools.partial(eqprop_utils.rectifier_p3_i, Is=1e-6)\n",
     "scrfn = torch.jit.script(functools.wraps(partial_fn), example_inputs=(torch.rand(2, 3),))"
    ]
   },
@@ -585,7 +585,7 @@
    "outputs": [],
    "source": [
     "%%timeit\n",
-    "eqprop_util.rectifier_p3_i(torch.rand(128, 3000))"
+    "eqprop_utils.rectifier_p3_i(torch.rand(128, 3000))"
    ]
   },
   {
@@ -606,9 +606,9 @@
    "source": [
     "import torch\n",
     "\n",
-    "from src.core.eqprop import eqprop_util\n",
+    "from src.core.eqprop import eqprop_utils\n",
     "\n",
-    "ots = eqprop_util.OTS()\n",
+    "ots = eqprop_utils.OTS()\n",
     "V = torch.rand((10, 100))"
    ]
   },
