--- a/notebooks/eqprop/scipy_solver.ipynb
+++ b/notebooks/eqprop/scipy_solver.ipynb
@@ -17,7 +17,7 @@
     "import torch\n",
     "from scipy.optimize import fsolve\n",
     "\n",
-    "from src.core.eqprop.eqprop_util import OTS, P3OTS"
+    "from src.utils.eqprop_utils import OTS, P3OTS"
    ]
   },
   {
