--- a/notebooks/eqprop/.old.ipynb
+++ b/notebooks/eqprop/.old.ipynb
@@ -16,8 +16,8 @@
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from src.core.eqprop.eqprop_util import AdjustParams, deltaV\n",
-    "from src.core.spice import ShallowCircuit, SPICEParser, XyceSim, create_circuit"
+    "from src.core.spice import ShallowCircuit, SPICEParser, XyceSim, create_circuit\n",
+    "from src.utils.eqprop_utils import AdjustParams, deltaV"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
