--- a/notebooks/eqprop/toy_example.ipynb
+++ b/notebooks/eqprop/toy_example.ipynb
@@ -46,7 +46,7 @@
     "      max_iter: 5\n",
     "      atol: 1e-5\n",
     "      activation:\n",
-    "        _target_: src.core.eqprop.eqprop_util.P3OTS\n",
+    "        _target_: src.utils.eqprop_utils.P3OTS\n",
     "        Is: 1e-6\n",
     "        Vth: 1\n",
     "        Vl: 0\n",
@@ -76,7 +76,7 @@
     "# train\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from src.core.eqprop.eqprop_util import init_params\n",
+    "from src.utils.eqprop_utils import init_params\n",
     "\n",
     "optimizer = torch.optim.SGD(net.parameters(), lr=0.01)\n",
     "loss_fn = torch.nn.MSELoss(reduction=\"sum\")\n",
@@ -121,10 +121,9 @@
    "source": [
     "import torch\n",
     "\n",
-    "from src.core.eqprop.eqprop_util import P3OTS, SymReLU\n",
-    "\n",
     "# xor for newton strategy\n",
     "from src.core.eqprop.strategy import NewtonStrategy\n",
+    "from src.utils.eqprop_utils import P3OTS, SymReLU\n",
     "\n",
     "model = torch.nn.Sequential(torch.nn.Linear(2, 1, bias=True), torch.nn.Linear(1, 1, bias=True))\n",
     "model[0].weight.data = torch.tensor([[-1.0, -1.0]])\n",
