refactor: Change stratege&solver.solve() output type to torch.Tensor & Move splitting code into AnalogEP2.set_nodes()

--- a/notebooks/eqprop/eqprop-modules.ipynb
+++ b/notebooks/eqprop/eqprop-modules.ipynb
@@ -11,9 +11,11 @@
     "from src.core.eqprop import nn as enn\n",
     "\n",
     "input_size = 5\n",
+    "output_size = 2\n",
+    "\n",
     "x = torch.rand(1, input_size, requires_grad=True)\n",
-    "y = torch.rand(1, 2)\n",
-    "layer = enn.EqPropLinear(input_size, 2, bias=False)\n",
+    "y = torch.rand(1, output_size)\n",
+    "layer = enn.EqPropLinear(input_size, output_size, bias=False)\n",
     "optimizer = torch.optim.SGD(layer.parameters(), lr=layer.solver.beta)"
    ]
   },
@@ -26,7 +28,8 @@
     "import torch.nn.functional as F\n",
     "\n",
     "print(layer.weight)\n",
-    "y_hat = layer(x)\n",
+    "logit = layer(x)\n",
+    "y_hat = F.softmax(logit, dim=1)\n",
     "loss = F.mse_loss(y_hat, y)\n",
     "optimizer.zero_grad()\n",
     "loss.backward()\n",
